Fix bug with delete button not showing.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -30,7 +30,7 @@ textarea {
     font-family: Calibri;
     background-color: #ddd;
     color: black;
-    width: 10%;
+    width: 13%;
     height: 25px;
 }
 
